add handlers GETS
